@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
-designation
}

class Employee {
-name
}

class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-payLoad
-tare
-gross
-weight
}

class CargoManifest {
-listOfContainers
-ratio
-date
-mmsiCode
-id
-numberOfContainers
-destination
}

class Ship {
-mmsiCode
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-draft
-name
-vesselTypeId
-length
-width
-capacity
}



class Ports {
-identification
-name
}

class Truck {

}

class Warehouse {
-identification
-name
-capacity
-occupancy
}

class Country {
-name
-continent
}

class PlaceLocation {
-latitude
-longitude
}

class ShipLocation {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}

class User{
-username
-password
}

class Role{
-designation
}

class Capital{
-name
}

class Place {

}

class Border {
-countryName1
-countryName2
}

class FreightNetwork {
}

class Seadist {
-portId1
-portId2
-seaDistance
-portName1
-portName2
-countryName1
-countryName2
}

CargoManifest "*" -- "1" Ports : delivered at >
CargoManifest "*" -- "1" Warehouse : delivered at >

Company "1"--"1..*" Ship: own >
Company "1" - "1..*" System : has >
Company "1"--"1..*" Employee: have >
Company "1"--"1..*" Truck: own >
Company "1"--"1..*" Ports: have >
Company "1"--"1" FreightNetwork: have >

Containers "1..*"--"1..*" CargoManifest: related to >
Containers "0..*"--"1" Ports: store >
Containers "0..*"--"1" Warehouse: store >

Country "2" -- "*" Border : has a >

Place <|-- Ports
Place <|-- Capital

PlaceLocation "*" -- "1" Country : placed in >

Place "1" -- "1" PlaceLocation : located at >

Ship "1"---"1..*" Containers : transport >
Ship "0..*"--"1" Ports: dock >
Ship "1" -- "1..*" ShipLocation : has >

Employee "1" --- "1..*" ShipLocation : controls >
Employee "1" -- "1" User : relates to >
Employee "1" --- "1..*" Ports : controls >

Truck "1"--"1..*" Containers : transport >
Truck "0..*"--"1" Warehouse: park >

User "1..*" -- "1" System : uses >
User "1" -- "1..*" Role : has >

Warehouse "1" -- "1" PlaceLocation : located at >
FreightNetwork "1" -- "1..*" Place : related with

Ports "2"--"*" Seadist: has a


@enduml